# PropFlowWebsite

./: .replit  CNAME  PropertyFlow_Overview.md  pnpm-lock.yaml  pyproject.toml  replit.md  skills-lock.json
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted-Build-me-a-lightweight-static-single-page-marketing-web_1776802257826.txt  Pasted-I-m-refining-a-lightweight-static-landing-page-for-my-s_1776804041970.txt  Pasted-I-need-a-detailed-polished-explanation-of-the-three-con_1776861624662.txt  Pasted-I-want-you-to-refine-an-existing-static-one-page-landin_1776811587923.txt  Pasted-Improve-the-existing-PropertyFlow-landing-page-for-conv_1778096416373.txt  Pasted-Improve-the-overall-clarity-simplicity-and-visual-feel-_1778095116920.txt  Pasted-On-a-site-like-yours-icons-should-be-used-sparingly-to-_1778108740311.txt  Pasted-Refine-the-colour-palette-and-contrast-Maintain-the-bei_1778101544507.txt  Pasted-Rewrite-the-hero-section-to-focus-on-outcomes-The-curre_1778099102593.txt  Pasted-You-are-a-senior-backend-focused-full-stack-engineer-Yo_1776820596669.txt  Pasted-You-are-an-expert-senior-full-stack-engineer-building-a_1776814983164.txt  Pasted-You-are-improving-the-UI-UX-of-an-existing-FastAPI-Jinj_1776822430859.txt  Pasted-You-are-improving-the-existing-Property-Workflow-Co-lan_1778086532362.txt  Pasted-You-are-improving-the-existing-Property-Workflow-Co-lan_1778094428926.txt  Pasted-You-are-upgrading-an-existing-browser-based-property-wo_1776816544560.txt  Pasted-You-are-working-inside-the-existing-PropertyFlow-worksp_1776862135454.txt  (+1 more)
docs/: 404.html  (+3 more)
(+45 files in other folders)
