[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.9",
    "resend>=2.29.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.45.0",
]
